--- a/resources/media.fxml
+++ b/resources/media.fxml
@@ -36,13 +36,13 @@
          <items>
             <Pane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <CheckBox layoutX="22.0" layoutY="50.0" mnemonicParsing="false" text="片头截取(秒)" />
-                  <CheckBox layoutX="22.0" layoutY="92.0" mnemonicParsing="false" text="片尾截取(秒)" />
-                  <TextField layoutX="146.0" layoutY="47.0" />
-                  <TextField layoutX="146.0" layoutY="89.0" />
-                  <Button layoutX="-1.0" layoutY="598.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="451.0" text="开始" />
-                  <CheckBox layoutX="22.0" layoutY="132.0" mnemonicParsing="false" text="视频裁剪频率(秒)" />
-                  <TextField layoutX="146.0" layoutY="129.0" />
+                   <CheckBox layoutX="22.0" layoutY="50.0" mnemonicParsing="false" text="片头截取(秒)" fx:id="startInterceptSwitch"/>
+                   <CheckBox layoutX="22.0" layoutY="92.0" mnemonicParsing="false" text="片尾截取(秒)" fx:id="endInterceptSwitch"/>
+                   <CheckBox layoutX="22.0" layoutY="132.0" mnemonicParsing="false" text="视频裁剪频率(秒)" fx:id="interceptRateSwitch"/>
+                   <TextField layoutX="146.0" layoutY="47.0" fx:id="startInterceptVal"/>
+                   <TextField layoutX="146.0" layoutY="89.0" fx:id="endInterceptVal"/>
+                   <TextField layoutX="146.0" layoutY="129.0" fx:id="interceptRateVal"/>
+                   <Button layoutX="-1.0" layoutY="598.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="451.0" text="开始" onAction="#start" />
                </children>
             </Pane>
          </items>
@@ -51,6 +51,7 @@
    <center>
       <TableView fx:id="mediTable" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <columns>
+          <TableColumn fx:id="checkBox" prefWidth="50.0" text="选择" />
           <TableColumn fx:id="id" prefWidth="50.0" text="序号" />
           <TableColumn fx:id="fileName" prefWidth="272.0" text="名称" />
             <TableColumn fx:id="durationFormat" prefWidth="110.0" text="时长" />
