--- a/resources/media.fxml
+++ b/resources/media.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.chart.*?>
 <?import javafx.scene.control.*?>
@@ -22,29 +23,42 @@
           </Menu>
           <Menu mnemonicParsing="false" text="帮助">
             <items>
-              <MenuItem mnemonicParsing="false" text="捐赠" onAction="#showDonation"/>
+              <MenuItem mnemonicParsing="false" onAction="#showDonation" text="捐赠" />
             </items>
           </Menu>
         </menus>
       </MenuBar>
    </top>
    <bottom>
-      <ProgressBar prefHeight="18.0" prefWidth="1393.0" progress="0.0" BorderPane.alignment="CENTER" fx:id="progressBar" />
+      <ProgressBar fx:id="progressBar" prefHeight="18.0" prefWidth="1393.0" progress="0.0" BorderPane.alignment="CENTER" />
    </bottom>
    <right>
       <SplitPane prefHeight="657.0" prefWidth="450.0" BorderPane.alignment="CENTER">
          <items>
-            <Pane prefHeight="200.0" prefWidth="200.0">
-               <children>
-                   <CheckBox layoutX="22.0" layoutY="50.0" mnemonicParsing="false" text="片头截取(秒)" fx:id="startInterceptSwitch"/>
-                   <CheckBox layoutX="22.0" layoutY="92.0" mnemonicParsing="false" text="片尾截取(秒)" fx:id="endInterceptSwitch"/>
-                   <CheckBox layoutX="22.0" layoutY="132.0" mnemonicParsing="false" text="视频裁剪频率(秒)" fx:id="interceptRateSwitch"/>
-                   <TextField layoutX="146.0" layoutY="47.0" fx:id="startInterceptVal"/>
-                   <TextField layoutX="146.0" layoutY="89.0" fx:id="endInterceptVal"/>
-                   <TextField layoutX="146.0" layoutY="129.0" fx:id="interceptRateVal"/>
-                   <Button layoutX="-1.0" layoutY="598.0" mnemonicParsing="false" prefHeight="57.0" prefWidth="451.0" text="开始" onAction="#start" />
-               </children>
-            </Pane>
+            <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="655.0" prefWidth="619.0">
+              <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                     <children>
+                        <TextArea fx:id="mediaInfoTextArea" prefHeight="325.0" prefWidth="448.0"></TextArea>
+                     </children>
+                  </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+                     <children>
+                        <Pane prefHeight="326.0" prefWidth="447.0">
+                           <children>
+                               <Text layoutX="22.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="片头截取(秒)" />
+                               <Text layoutX="22.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="片尾截取(秒)" />
+                               <Text layoutX="22.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="视频裁剪频率(秒)" />
+                               <TextField fx:id="startInterceptVal" layoutX="125.0" layoutY="10.0" prefHeight="23.0" prefWidth="63.0" />
+                               <TextField fx:id="endInterceptVal" layoutX="125.0" layoutY="43.0" prefHeight="23.0" prefWidth="63.0" />
+                               <TextField fx:id="interceptRateVal" layoutX="125.0" layoutY="74.0" prefHeight="23.0" prefWidth="63.0" />
+                               <Button layoutX="-2.0" layoutY="269.0" mnemonicParsing="false" onAction="#start" prefHeight="57.0" prefWidth="451.0" text="开始" />
+                           </children>
+                        </Pane>
+                     </children>
+                  </AnchorPane>
+              </items>
+            </SplitPane>
          </items>
       </SplitPane>
    </right>
