--- a/resources/media.fxml
+++ b/resources/media.fxml
@@ -17,7 +17,6 @@
         <menus>
           <Menu mnemonicParsing="false" text="文件">
             <items>
-              <MenuItem mnemonicParsing="false" onAction="#openDirectory" text="选择文件夹" />
                   <MenuItem mnemonicParsing="false" onAction="#openFile" text="选择文件" />
             </items>
           </Menu>
@@ -39,7 +38,7 @@
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                      <children>
-                        <TextArea fx:id="mediaInfoTextArea" prefHeight="325.0" prefWidth="448.0"></TextArea>
+                        <TextArea fx:id="mediaInfoTextArea" prefHeight="325.0" prefWidth="448.0" />
                      </children>
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
@@ -49,10 +48,11 @@
                                <Text layoutX="22.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="片头截取(秒)" />
                                <Text layoutX="22.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="片尾截取(秒)" />
                                <Text layoutX="22.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="视频裁剪频率(秒)" />
-                               <TextField fx:id="startInterceptVal" layoutX="125.0" layoutY="10.0" prefHeight="23.0" prefWidth="63.0" />
-                               <TextField fx:id="endInterceptVal" layoutX="125.0" layoutY="43.0" prefHeight="23.0" prefWidth="63.0" />
-                               <TextField fx:id="interceptRateVal" layoutX="125.0" layoutY="74.0" prefHeight="23.0" prefWidth="63.0" />
+                               <TextField layoutX="125.0" layoutY="10.0" prefHeight="23.0" prefWidth="63.0" fx:id="startInterceptVal"/>
+                               <TextField layoutX="125.0" layoutY="43.0" prefHeight="23.0" prefWidth="63.0" fx:id="endInterceptVal"/>
+                               <TextField layoutX="125.0" layoutY="74.0" prefHeight="23.0" prefWidth="63.0" fx:id="interceptRateVal"/>
                                <Button layoutX="-2.0" layoutY="269.0" mnemonicParsing="false" onAction="#start" prefHeight="57.0" prefWidth="451.0" text="开始" />
+                              <CheckBox layoutX="283.0" layoutY="14.0" mnemonicParsing="false" text="导出Excel" fx:id="switchExportExcel"/>
                            </children>
                         </Pane>
                      </children>
@@ -63,15 +63,25 @@
       </SplitPane>
    </right>
    <center>
-      <TableView fx:id="mediTable" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-        <columns>
-            <TableColumn fx:id="id" prefWidth="50.0" text="序号" />
-            <TableColumn fx:id="fileName" prefWidth="272.0" text="名称" />
-            <TableColumn fx:id="durationFormat" prefWidth="110.0" text="时长" />
-            <TableColumn fx:id="fileSize" minWidth="0.0" prefWidth="110.0" text="大小" />
-            <TableColumn fx:id="schedule" prefWidth="71.0" text="进度" />
-            <TableColumn prefWidth="135.0" text="操作" />
-        </columns>
-      </TableView>
+      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <TableView fx:id="mediTable" prefHeight="578.0" prefWidth="750.0">
+              <columns>
+                  <TableColumn fx:id="id" prefWidth="50.0" text="序号" />
+                  <TableColumn fx:id="fileName" prefWidth="272.0" text="名称" />
+                  <TableColumn fx:id="durationFormat" prefWidth="110.0" text="时长" />
+                  <TableColumn fx:id="fileSize" minWidth="0.0" prefWidth="110.0" text="大小" />
+                  <TableColumn fx:id="schedule" prefWidth="71.0" text="进度" />
+                  <TableColumn prefWidth="120.0" text="操作" />
+              </columns>
+            </TableView>
+            <TextField fx:id="sourcePath" layoutX="84.0" layoutY="588.0" prefHeight="23.0" prefWidth="583.0" />
+            <TextField fx:id="targetPath" layoutX="84.0" layoutY="620.0" prefHeight="23.0" prefWidth="583.0" />
+            <Text layoutX="14.0" layoutY="604.0" strokeType="OUTSIDE" strokeWidth="0.0" text="原视频路径:" />
+            <Text layoutX="14.0" layoutY="636.0" strokeType="OUTSIDE" strokeWidth="0.0" text="   保存路径:" />
+            <Button layoutX="681.0" layoutY="588.0" mnemonicParsing="false" onAction="#chooseSourcePath" text="选择" />
+            <Button layoutX="681.0" layoutY="620.0" mnemonicParsing="false" onAction="#chooseTargetPath" text="选择" />
+         </children>
+      </Pane>
    </center>
 </BorderPane>
