--- a/resources/media.fxml
+++ b/resources/media.fxml
@@ -60,6 +60,14 @@
                               <Text layoutX="191.0" layoutY="62.0" strokeType="OUTSIDE" strokeWidth="0.0" text="数量" />
                               <TextField fx:id="imageNum" layoutX="225.0" layoutY="46.0" prefHeight="23.0" prefWidth="50.0" />
                               <CheckBox fx:id="mergeSheetExcel" layoutX="138.0" layoutY="83.0" mnemonicParsing="false" text="合并Sheet" />
+                              <Text layoutX="7.0" layoutY="131.0" strokeType="OUTSIDE" strokeWidth="0.0" text="水印位置" />
+                              <TextField fx:id="watermarkX" layoutX="64.0" layoutY="115.0" prefHeight="23.0" prefWidth="50.0" />
+                              <Text layoutX="124.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X" />
+                              <TextField fx:id="watermarkY" layoutX="139.0" layoutY="115.0" prefHeight="23.0" prefWidth="50.0" />
+                              <Text layoutX="205.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="水印大小" />
+                              <TextField fx:id="watermarkWidth" layoutX="262.0" layoutY="114.0" prefHeight="23.0" prefWidth="50.0" />
+                              <Text layoutX="322.0" layoutY="129.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X" />
+                              <TextField fx:id="watermarkHeight" layoutX="337.0" layoutY="114.0" prefHeight="23.0" prefWidth="50.0" />
                            </children>
                         </Pane>
                      </children>
